sync code with profiler
Signed-off-by: Ludovic Orban <lorban@bitronix.be>